project(CS321)

SET(CMAKE_CXX_FLAGS "-std=c++17 -lc++")

include_directories("range-v3/include")

add_executable("app1" "app1.cpp")
add_executable("app2" "app2.cpp")
add_executable("app3" "app3.cpp")
add_executable("app4" "app4.cpp")
add_executable("app5" "app5.cpp")
add_executable("app6" "app6.cpp")
add_executable("app7" "app7.cpp")
add_executable("app8" "app8.cpp")
add_executable("app9" "app9.cpp")
add_executable("app10" "app10.cpp")
add_executable("app11" "app11.cpp")
add_executable("app12" "app12.cpp")
add_executable("app13" "app13.cpp")

add_subdirectory("lab1")
add_subdirectory("lab2")
add_subdirectory("lab_templates")
add_subdirectory("lab_gcd")
add_subdirectory("lab_sorters")
#add_subdirectory("lab_sorters")
add_subdirectory("lab_scalarmult")
add_subdirectory("lab_primes")
add_subdirectory("lab_printDetail")
add_subdirectory("lab_ranges")
